completed count_zeroes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--<script src="count-zeroes.js"></script> -->
+    <script src="find-floor.js"></script>
+    <script src="find-rotated-index.js"></script>
+    <script src="find-rotation-count.js"></script>
+    <script src="sorted-frequency.js"></script>
 </body>
 </html>
