--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--<script src="count-zeroes.js"></script> -->
-    <script src="find-floor.js"></script>
+    <!--<script src="find-floor.js"></script> -->
     <script src="find-rotated-index.js"></script>
     <script src="find-rotation-count.js"></script>
     <script src="sorted-frequency.js"></script>
